--- a/questionnaire.css
+++ b/questionnaire.css
@@ -486,10 +486,10 @@
 }
 
 .logo-img {
-  width: 24px;
-  height: 24px;
-  vertical-align: middle;
-  margin-left: 0.5rem;
+  width: 1.2em;
+  height: 1.2em;
+  vertical-align: text-top;
+  margin-left: 0.125em;
 }
 
 /* Responsive adjustments */
