--- a/questionnaire.css
+++ b/questionnaire.css
@@ -493,6 +493,13 @@
 }
 
 /* Responsive adjustments */
+@media (max-width: 925px) {
+    .prema-header h1 {
+        font-size: 3rem;
+        text-align: center;
+    }
+}
+
 @media (max-width: 768px) {
   .header-content {
     flex-direction: column;
