--- a/questionnaire.css
+++ b/questionnaire.css
@@ -303,6 +303,7 @@
   align-items: center;
   gap: 0.5rem;
   margin-bottom: 1rem;
+  font-size: 1.5rem;
 }
 
 .tips-icon {
@@ -313,6 +314,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  font-size: 1rem;
 }
 
 .tips-list li {
